express-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pen-app
  namespace: pen-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pen-app
  template:
    metadata:
      labels:
        app: pen-app
    spec:
      containers:
      - name: pen-app
        image: oharkins/pen-stack:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
